# psf_generator

./: .gitignore  .readthedocs.yaml  240125minidemo.ipynb  LICENSE  Propagator.py  Pupil.py  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
demos/: 240125minidemo.ipynb  240609czt_tests.ipynb  240610psf_tests.ipynb  240614approx_runs.py  240614benchmark.py  240614zernike_tests.ipynb  240616find_limit.py  240617bmk_plots.ipynb  240617timing_plots.ipynb  240617timing_runs.py  240621vectorial_psf_tests.ipynb  240824airplane.ipynb  Basic_Usage.ipynb  approx_runs.py  basic.ipynb  basic_run.py  benchmark_accuracy.py  benchmark_runtime.py  benchmark_runtime_scalar.py  benchmarking.ipynb  compare_benchmark_results.py  compute_quantities_paper.py  find_limit.py  plot_quantities_paper.py  scalar_accuracy_tests.ipynb  test_cartesian_vector.ipynb  test_fourier_propagator.py  test_kirchhoff_propagator.py  test_polar_scalar.ipynb  test_polar_vector.ipynb  test_vectorial_propagator.py
docs/: bibliography.bib  conf.py  index.md  requirements.txt
notebooks/: 240125minidemo.ipynb  test.py
src/: Input.py  Params.py  Propagator.py  Pupil.py  bessel_ad.py  czt_debug.ipynb  integrators.py  params.py  propagator.py  pupil.py  test_pupils.py  testers.py
tests/: 240609czt_tests.ipynb  240610psf_tests.ipynb  240619gibson_lanni.ipynb  240621vectorial_psf_tests.ipynb  240708czt_debug.ipynb  basic_run.py  test_cartesian_scalar.ipynb  test_cartesian_vector.ipynb  test_custom_bessel_functions.py  test_polar_scalar.ipynb  test_polar_vector.ipynb  test_psf.py  test_pupil.py  test_pupil_psf.py  (+1 more)
(+48 files in other folders)
